# LazyLibrarian

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  LazyLibrarian.py  Makefile  README.md  TelemetryServer.py  UNITTESTING.md  coverswap.py  demo_preprocessor.py  epubandmobi.py  example.dicts.json  example.filetemplate.text  example.genres.json  example.gr_genres.json  example.html.filetemplate.text  example.logintemplate.text  example.monthnames.json  example_custom_notification.py  example_ebook_convert.py  example_mega_link.py  example_preprocessor.py  example_rclone_link.sh  gsconvert.py  logging.yaml  pyproject.toml  recover.py  requirements.txt  updater.py
.github/workflows/: docker-publish.yml
cherrypy/: _cpcompat_subprocess.py  _cpdispatch.py  _cperror.py  _cpreqbody.py  lazylibrarian.note
cherrypy/lib/: httputil.py
cherrypy/process/: wspbus.py
cherrypy/wsgiserver/: ssl_pyopenssl.py  wsgiserver2.py  wsgiserver3.py
data/css/: bookstrap.css  magnifier.css
data/interfaces/bookstrap/: audio.html  author.html  base.html  books.html  choosetype.html  comicissues.html  comicresults.html  comics.html  config.html  config_functions.js  coverwall.html  editauthor.html  editbook.html  editcomic.html  editissue.html  editmag.html  editseries.html  formlogin.html  history.html  index.html  issues.html  login.html  logs.html  magazines.html  managebooks.html  manageissues.html  manualsearch.html  members.html  opds.html  profile.html  register.html  searchresults.html  series.html  shutdown.html  users.html
data/interfaces/legacy/: author.html  books.html  config.html  editauthor.html  editbook.html  history.html  index.html  issues.html  logs.html  magazines.html  managebooks.html  manageissues.html  manualsearch.html  members.html  searchresults.html  series.html
deluge_client/: client.py
icrawler/: crawler.py  downloader.py  parser.py
icrawler/builtin/: baidu.py  bing.py  flickr.py  google.py  greedy.py  urllist.py
icrawler/storage/: filesystem.py
icrawler/utils/: cached_queue.py  proxy_pool.py  session.py
init/: lazylibrarian.initd
lazylibrarian/: __init__.py  annas.py  api.py  archive_utils.py  auth.py  blockhandler.py  bookdict.py  bookrename.py  bookwork.py  cache.py  calibre.py  calibre_integration.py  classes.py  cleanup.py  comicid.py  comicscan.py  comicsearch.py  common.py  config.py  config2.py  configarray.py  configdefs.py  configenums.py  configtypes.py  csvfile.py  database.py  dbupgrade.py  deluge.py  directparser.py  dnb.py  download_client.py  downloadmethods.py  ebook_convert.py  filesystem.py  formatter.py  gb.py  gr.py  grsync.py  hc.py  images.py  (+43 more)
lazylibrarian/notifiers/: __init__.py  androidpn.py  apprise_notify.py  boxcar.py  custom_notify.py  email_notify.py  growl.py  nma.py  prowl.py  pushbullet.py  pushbullet2.py  pushover.py  slack.py  telegram.py  tweet.py
lib/: csv.py  feedparser.note  feedparser.py  httpagentparser.py  lazylibrarian.notes  qbittorrent.py  rfeed.py  tinytag.py  zipfile.py  zlibrary.py
lib/ConcurrentLogHandler/: cloghandler.py  portalocker.py
lib/PyPDF3/: generic.py  pdf.py
lib/UnRAR2/: unix.py
lib/apscheduler/: scheduler.py  threadpool.py
lib/concurrent_log_handler/: __init__.py
lib/deluge_client/: client.py
lib/gntp/: core.py
lib/html5lib/: _inputstream.py
lib/html5lib/filters/: sanitizer.py
lib/icrawler/: crawler.py  downloader.py  feeder.py  lazylibrarian.note  parser.py
lib/icrawler/builtin/: baidu.py  bing.py  filter.py  flickr.py  google.py  greedy.py  urllist.py
lib/icrawler/storage/: filesystem.py  google_storage.py
lib/icrawler/utils/: cached_queue.py
lib/magic/: __init__.py
lib/mobi/: __init__.py
lib/oauth2/: __init__.py  lazylibrarian.note
lib/pythontwitter/: __init__.py
lib/thefuzz/: utils.py
lib/unrar/: rarfile.py  unrarlib.py
lib3/: feedparser.py
lib3/bs4/builder/: __init__.py
mako/: compat.py
requests/: compat.py
scripts/ci/: install-optional-modules.sh  install-required-modules.sh  remove-optional-modules.sh  runtests.sh
snap/: snapcraft.yaml
telemetryserver/: Dockerfile  TELEMETRYSERVER.md  TSDashServer.py  TelemetryServer.py  docker-compose.yml  server.py  telemetry.ini  telemetrydb.py  telemetryutils.py  telemetryweb.py  tslogging.yaml
unittests/: __init.py__  __init__.py  config.ini  test_blockhandler.py  test_cache.py  test_cleanup.py  test_config.py  test_config2.py  test_configtypes.py  test_database.py  test_filesystem.py  test_formatter.py  test_icrawler.py  test_images.py  test_importer.py  test_librarysync.py  test_logconfig.py  test_postprocess.py  test_processcontrol.py  test_providers.py  test_scheduling.py  test_setup.py  test_telemetry.py  unittesthelpers.py
unittests/testdata/: Test Title - Bob Builder.azw3  Test Title - Bob Builder.epub  Test Title - Bob Builder.mobi  loggingtest.yaml  metadata.opf  telemetry-sample.json  testconfig-complex.ini  testconfig-defaults.ini  testconfig-errors.ini  testconfig-nondefault.ini
urllib3/: request.py
