[build-system]
requires = ["setuptools", "ez_setup"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["lazylibrarian"]

[project]
name = "LazyLibrarian"
version = "2022.12.05"
description = "LazyLibrarian is a SickBeard, CouchPotato, Headphones-like application for ebooks, audiobooks and magazines"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    'bs4',
    'html5lib',
    'webencodings',
    'requests[use_chardet_on_py3]',
    'urllib3',
    'pyOpenSSL',
    'cherrypy',
    'cherrypy_cors',
    'httpagentparser',
    'mako',
    'httplib2',
    'Pillow',
    'apprise',
    'PyPDF3',
    'python_magic',
    'thefuzz[speedup]',
    'deluge_client',
    'pyparsing',
]

[project.urls]
"Documentation" = "https://lazylibrarian.gitlab.io/"
"Issue Tracker" = "https://gitlab.com/LazyLibrarian/LazyLibrarian/-/issues"

# Config file for pytest
[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    # Ignore warning about CGI being deprecated in cherrypy
    '''ignore:'cgi' is deprecated''',
    # Ignore numerous warnings from cherrypy
    "ignore::DeprecationWarning: invalid escape sequence"
]